[gd_scene load_steps=5 format=2]

[ext_resource path="res://common/ui/HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://common/characters/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://common/gamePad/navigation.tscn" type="PackedScene" id=3]
[ext_resource path="res://common/ui/playerAndControl.gd" type="Script" id=4]

[node name="playerAndControl" type="YSort"]
position = Vector2( -0.944939, 13.8591 )
script = ExtResource( 4 )

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 2.56245, -8.41107 )

[node name="HUD" parent="." instance=ExtResource( 1 )]

[node name="navigation" parent="." instance=ExtResource( 3 )]

[connection signal="damagedBy" from="player" to="." method="_on_player_damagedBy"]
[connection signal="endClimbing" from="player" to="." method="_on_player_endClimbing"]
[connection signal="hit" from="player" to="." method="_on_player_hit"]
[connection signal="pressAccept" from="player" to="." method="_on_player_pressAccept"]
[connection signal="pressMenu" from="player" to="." method="_on_player_pressMenu"]
[connection signal="pressMenu" from="player" to="HUD" method="_on_player_pressMenu"]
[connection signal="startClimbing" from="player" to="." method="_on_player_startClimbing"]
[connection signal="equipItem" from="HUD" to="navigation" method="_on_HUD_equipItem"]
[connection signal="quit" from="HUD" to="." method="_on_HUD_quit"]
[connection signal="save" from="HUD" to="." method="_on_HUD_save"]
[connection signal="useItem" from="HUD" to="." method="_on_HUD_useItem"]
[connection signal="movePlayer" from="navigation" to="player" method="_on_navigation_movePlayer"]
[connection signal="pushButton" from="navigation" to="." method="_on_navigation_pushButton"]
[connection signal="pushButton" from="navigation" to="player" method="_on_navigation_pushButton"]
[connection signal="releaseButton" from="navigation" to="." method="_on_navigation_releaseButton"]
[connection signal="releaseButton" from="navigation" to="player" method="_on_navigation_releaseButton"]
